--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# Created by https://www.gitignore.io/api/swift,xcode
+
+### Swift ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -66,37 +70,22 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
-
+### Xcode ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
-build/
-DerivedData/
 
 ## Various settings
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata/
-
-##新增要忽略发文件
-*.xcuserstate  
-project.xcworkspace  
-xcuserdata  
-UserInterfaceState.xcuserstate  
-project.xcworkspace/  
-xcuserdata/  
-UserInterface.xcuserstate
-
 
 ## Other
-*.moved-aside
-*.xccheckout
-*.xcscmblueprint
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
+
+# End of https://www.gitignore.io/api/swift,xcode
